// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly on pages other than home 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <SearchHeader>
      <styled.div
        isOpen={false}
        page=""
      >
        <div
          className="sc-AxjAm hBVroR"
        >
          <div
            className="burger-bg"
          />
          <NavBar
            onClick={[Function]}
          >
            <styled.div
              className="header"
              page=""
            >
              <div
                className="sc-AxirZ tpVmv header"
              >
                <div
                  className="container"
                >
                  <Link
                    to="/"
                  >
                    <LinkAnchor
                      href="/"
                      navigate={[Function]}
                    >
                      <a
                        href="/"
                        onClick={[Function]}
                      >
                        <img
                          alt="logo"
                          className="logo"
                          src=""
                        />
                      </a>
                    </LinkAnchor>
                  </Link>
                  <styled.div
                    page=""
                  >
                    <div
                      className="sc-AxiKw hOQNuo"
                    >
                      <Dropdown
                        additionLabel="Add "
                        additionPosition="top"
                        className="header-links link-dropdown"
                        closeOnBlur={true}
                        closeOnEscape={true}
                        deburr={false}
                        icon="dropdown"
                        minCharacters={1}
                        noResultsMessage="No results found."
                        openOnFocus={true}
                        renderLabel={[Function]}
                        searchInput="text"
                        selectOnBlur={true}
                        selectOnNavigation={true}
                        simple={true}
                        text="About"
                        wrapSelection={true}
                      >
                        <Ref
                          innerRef={
                            Object {
                              "current": <div
                                aria-expanded="false"
                                class="ui simple dropdown header-links link-dropdown"
                                role="listbox"
                                tabindex="0"
                              >
                                <div
                                  aria-atomic="true"
                                  aria-live="polite"
                                  class="text"
                                  role="alert"
                                >
                                  About
                                </div>
                                <i
                                  aria-hidden="true"
                                  class="dropdown icon"
                                />
                                <div
                                  class="menu transition link-menu"
                                >
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="/about"
                                    >
                                      About Us
                                    </a>
                                  </div>
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="/documentation"
                                    >
                                      Documentation
                                    </a>
                                  </div>
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="/cite"
                                    >
                                      Cite Us
                                    </a>
                                  </div>
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="http://github.com/bhklab/pharmacodb"
                                    >
                                      Github
                                    </a>
                                  </div>
                                </div>
                              </div>,
                            }
                          }
                        >
                          <RefFindNode
                            innerRef={
                              Object {
                                "current": <div
                                  aria-expanded="false"
                                  class="ui simple dropdown header-links link-dropdown"
                                  role="listbox"
                                  tabindex="0"
                                >
                                  <div
                                    aria-atomic="true"
                                    aria-live="polite"
                                    class="text"
                                    role="alert"
                                  >
                                    About
                                  </div>
                                  <i
                                    aria-hidden="true"
                                    class="dropdown icon"
                                  />
                                  <div
                                    class="menu transition link-menu"
                                  >
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="/about"
                                      >
                                        About Us
                                      </a>
                                    </div>
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="/documentation"
                                      >
                                        Documentation
                                      </a>
                                    </div>
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="/cite"
                                      >
                                        Cite Us
                                      </a>
                                    </div>
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="http://github.com/bhklab/pharmacodb"
                                      >
                                        Github
                                      </a>
                                    </div>
                                  </div>
                                </div>,
                              }
                            }
                          >
                            <div
                              aria-expanded={false}
                              className="ui simple dropdown header-links link-dropdown"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onMouseDown={[Function]}
                              role="listbox"
                              tabIndex={0}
                            >
                              <div
                                aria-atomic={true}
                                aria-live="polite"
                                className="text"
                                role="alert"
                              >
                                About
                              </div>
                              <Icon
                                as="i"
                                className=""
                                name="dropdown"
                                onClick={[Function]}
                              >
                                <i
                                  aria-hidden="true"
                                  className="dropdown icon"
                                  onClick={[Function]}
                                />
                              </Icon>
                              <DropdownMenu
                                className="link-menu"
                              >
                                <div
                                  className="menu transition link-menu"
                                >
                                  <DropdownItem
                                    key="About Us"
                                  >
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <Link
                                        to="/about"
                                      >
                                        <LinkAnchor
                                          href="/about"
                                          navigate={[Function]}
                                        >
                                          <a
                                            href="/about"
                                            onClick={[Function]}
                                          >
                                            About Us
                                          </a>
                                        </LinkAnchor>
                                      </Link>
                                    </div>
                                  </DropdownItem>
                                  <DropdownItem
                                    key="Documentation"
                                  >
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <Link
                                        to="/documentation"
                                      >
                                        <LinkAnchor
                                          href="/documentation"
                                          navigate={[Function]}
                                        >
                                          <a
                                            href="/documentation"
                                            onClick={[Function]}
                                          >
                                            Documentation
                                          </a>
                                        </LinkAnchor>
                                      </Link>
                                    </div>
                                  </DropdownItem>
                                  <DropdownItem
                                    key="Cite Us"
                                  >
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <Link
                                        to="/cite"
                                      >
                                        <LinkAnchor
                                          href="/cite"
                                          navigate={[Function]}
                                        >
                                          <a
                                            href="/cite"
                                            onClick={[Function]}
                                          >
                                            Cite Us
                                          </a>
                                        </LinkAnchor>
                                      </Link>
                                    </div>
                                  </DropdownItem>
                                  <DropdownItem>
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <a
                                        href="http://github.com/bhklab/pharmacodb"
                                      >
                                        Github
                                      </a>
                                    </div>
                                  </DropdownItem>
                                </div>
                              </DropdownMenu>
                            </div>
                          </RefFindNode>
                        </Ref>
                      </Dropdown>
                      <Link
                        className="header-links link"
                        to="/explore"
                      >
                        <LinkAnchor
                          className="header-links link"
                          href="/explore"
                          navigate={[Function]}
                        >
                          <a
                            className="header-links link"
                            href="/explore"
                            onClick={[Function]}
                          >
                            Explore
                          </a>
                        </LinkAnchor>
                      </Link>
                      <Dropdown
                        additionLabel="Add "
                        additionPosition="top"
                        className="header-links link-dropdown"
                        closeOnBlur={true}
                        closeOnEscape={true}
                        deburr={false}
                        icon="dropdown"
                        minCharacters={1}
                        noResultsMessage="No results found."
                        openOnFocus={true}
                        renderLabel={[Function]}
                        searchInput="text"
                        selectOnBlur={true}
                        selectOnNavigation={true}
                        simple={true}
                        text="Data"
                        wrapSelection={true}
                      >
                        <Ref
                          innerRef={
                            Object {
                              "current": <div
                                aria-expanded="false"
                                class="ui simple dropdown header-links link-dropdown"
                                role="listbox"
                                tabindex="0"
                              >
                                <div
                                  aria-atomic="true"
                                  aria-live="polite"
                                  class="text"
                                  role="alert"
                                >
                                  Data
                                </div>
                                <i
                                  aria-hidden="true"
                                  class="dropdown icon"
                                />
                                <div
                                  class="menu transition link-menu"
                                >
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="/datasets"
                                    >
                                      Datasets
                                    </a>
                                  </div>
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="/cell_lines"
                                    >
                                      Cell Lines
                                    </a>
                                  </div>
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="/tissues"
                                    >
                                      Tissues
                                    </a>
                                  </div>
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="/compounds"
                                    >
                                      Compounds
                                    </a>
                                  </div>
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="/genes"
                                    >
                                      Genes
                                    </a>
                                  </div>
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="/experiments"
                                    >
                                      Experiments
                                    </a>
                                  </div>
                                </div>
                              </div>,
                            }
                          }
                        >
                          <RefFindNode
                            innerRef={
                              Object {
                                "current": <div
                                  aria-expanded="false"
                                  class="ui simple dropdown header-links link-dropdown"
                                  role="listbox"
                                  tabindex="0"
                                >
                                  <div
                                    aria-atomic="true"
                                    aria-live="polite"
                                    class="text"
                                    role="alert"
                                  >
                                    Data
                                  </div>
                                  <i
                                    aria-hidden="true"
                                    class="dropdown icon"
                                  />
                                  <div
                                    class="menu transition link-menu"
                                  >
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="/datasets"
                                      >
                                        Datasets
                                      </a>
                                    </div>
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="/cell_lines"
                                      >
                                        Cell Lines
                                      </a>
                                    </div>
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="/tissues"
                                      >
                                        Tissues
                                      </a>
                                    </div>
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="/compounds"
                                      >
                                        Compounds
                                      </a>
                                    </div>
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="/genes"
                                      >
                                        Genes
                                      </a>
                                    </div>
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="/experiments"
                                      >
                                        Experiments
                                      </a>
                                    </div>
                                  </div>
                                </div>,
                              }
                            }
                          >
                            <div
                              aria-expanded={false}
                              className="ui simple dropdown header-links link-dropdown"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onMouseDown={[Function]}
                              role="listbox"
                              tabIndex={0}
                            >
                              <div
                                aria-atomic={true}
                                aria-live="polite"
                                className="text"
                                role="alert"
                              >
                                Data
                              </div>
                              <Icon
                                as="i"
                                className=""
                                name="dropdown"
                                onClick={[Function]}
                              >
                                <i
                                  aria-hidden="true"
                                  className="dropdown icon"
                                  onClick={[Function]}
                                />
                              </Icon>
                              <DropdownMenu
                                className="link-menu"
                              >
                                <div
                                  className="menu transition link-menu"
                                >
                                  <DropdownItem
                                    key="Datasets"
                                  >
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <Link
                                        to="/datasets"
                                      >
                                        <LinkAnchor
                                          href="/datasets"
                                          navigate={[Function]}
                                        >
                                          <a
                                            href="/datasets"
                                            onClick={[Function]}
                                          >
                                            Datasets
                                          </a>
                                        </LinkAnchor>
                                      </Link>
                                    </div>
                                  </DropdownItem>
                                  <DropdownItem
                                    key="Cell Lines"
                                  >
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <Link
                                        to="/cell_lines"
                                      >
                                        <LinkAnchor
                                          href="/cell_lines"
                                          navigate={[Function]}
                                        >
                                          <a
                                            href="/cell_lines"
                                            onClick={[Function]}
                                          >
                                            Cell Lines
                                          </a>
                                        </LinkAnchor>
                                      </Link>
                                    </div>
                                  </DropdownItem>
                                  <DropdownItem
                                    key="Tissues"
                                  >
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <Link
                                        to="/tissues"
                                      >
                                        <LinkAnchor
                                          href="/tissues"
                                          navigate={[Function]}
                                        >
                                          <a
                                            href="/tissues"
                                            onClick={[Function]}
                                          >
                                            Tissues
                                          </a>
                                        </LinkAnchor>
                                      </Link>
                                    </div>
                                  </DropdownItem>
                                  <DropdownItem
                                    key="Compounds"
                                  >
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <Link
                                        to="/compounds"
                                      >
                                        <LinkAnchor
                                          href="/compounds"
                                          navigate={[Function]}
                                        >
                                          <a
                                            href="/compounds"
                                            onClick={[Function]}
                                          >
                                            Compounds
                                          </a>
                                        </LinkAnchor>
                                      </Link>
                                    </div>
                                  </DropdownItem>
                                  <DropdownItem
                                    key="Genes"
                                  >
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <Link
                                        to="/genes"
                                      >
                                        <LinkAnchor
                                          href="/genes"
                                          navigate={[Function]}
                                        >
                                          <a
                                            href="/genes"
                                            onClick={[Function]}
                                          >
                                            Genes
                                          </a>
                                        </LinkAnchor>
                                      </Link>
                                    </div>
                                  </DropdownItem>
                                  <DropdownItem
                                    key="Experiments"
                                  >
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <Link
                                        to="/experiments"
                                      >
                                        <LinkAnchor
                                          href="/experiments"
                                          navigate={[Function]}
                                        >
                                          <a
                                            href="/experiments"
                                            onClick={[Function]}
                                          >
                                            Experiments
                                          </a>
                                        </LinkAnchor>
                                      </Link>
                                    </div>
                                  </DropdownItem>
                                </div>
                              </DropdownMenu>
                            </div>
                          </RefFindNode>
                        </Ref>
                      </Dropdown>
                      <styled.button
                        className="search-button"
                        onClick={[Function]}
                      >
                        <button
                          className="sc-AxhCb bVxjJp search-button"
                          onClick={[Function]}
                        >
                          <img
                            alt="magnifying glass"
                            src=""
                          />
                        </button>
                      </styled.button>
                    </div>
                  </styled.div>
                </div>
              </div>
            </styled.div>
          </NavBar>
          <div
            className="search-container popup hidden"
          >
            <h1>
              Try searching for a...
            </h1>
            <SearchBar>
              <styled.div
                className="search-bar"
              >
                <div
                  className="sc-AxhUy dglwly search-bar"
                />
              </styled.div>
            </SearchBar>
            <span>
              Example:   paclitaxel   •   22rv1   •   mcf7 paclitaxel
            </span>
          </div>
        </div>
      </styled.div>
    </SearchHeader>
  </Router>
</BrowserRouter>
`;

exports[`renders correctly on the home page 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <SearchHeader>
      <styled.div
        isOpen={false}
        page="home"
      >
        <div
          className="sc-AxjAm iCSkNA"
        >
          <div
            className="burger-bg"
          />
          <NavBar
            onClick={[Function]}
          >
            <styled.div
              className="header"
              page="home"
            >
              <div
                className="sc-AxirZ ciHGgt header"
              >
                <div
                  className="container"
                >
                  <Link
                    to="/"
                  >
                    <LinkAnchor
                      href="/"
                      navigate={[Function]}
                    >
                      <a
                        href="/"
                        onClick={[Function]}
                      >
                        <img
                          alt="logo"
                          className="logo"
                          src=""
                        />
                      </a>
                    </LinkAnchor>
                  </Link>
                  <styled.div
                    page="home"
                  >
                    <div
                      className="sc-AxiKw gWrcBB"
                    >
                      <Dropdown
                        additionLabel="Add "
                        additionPosition="top"
                        className="header-links link-dropdown"
                        closeOnBlur={true}
                        closeOnEscape={true}
                        deburr={false}
                        icon="dropdown"
                        minCharacters={1}
                        noResultsMessage="No results found."
                        openOnFocus={true}
                        renderLabel={[Function]}
                        searchInput="text"
                        selectOnBlur={true}
                        selectOnNavigation={true}
                        simple={true}
                        text="About"
                        wrapSelection={true}
                      >
                        <Ref
                          innerRef={
                            Object {
                              "current": <div
                                aria-expanded="false"
                                class="ui simple dropdown header-links link-dropdown"
                                role="listbox"
                                tabindex="0"
                              >
                                <div
                                  aria-atomic="true"
                                  aria-live="polite"
                                  class="text"
                                  role="alert"
                                >
                                  About
                                </div>
                                <i
                                  aria-hidden="true"
                                  class="dropdown icon"
                                />
                                <div
                                  class="menu transition link-menu"
                                >
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="/about"
                                    >
                                      About Us
                                    </a>
                                  </div>
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="/documentation"
                                    >
                                      Documentation
                                    </a>
                                  </div>
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="/cite"
                                    >
                                      Cite Us
                                    </a>
                                  </div>
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="http://github.com/bhklab/pharmacodb"
                                    >
                                      Github
                                    </a>
                                  </div>
                                </div>
                              </div>,
                            }
                          }
                        >
                          <RefFindNode
                            innerRef={
                              Object {
                                "current": <div
                                  aria-expanded="false"
                                  class="ui simple dropdown header-links link-dropdown"
                                  role="listbox"
                                  tabindex="0"
                                >
                                  <div
                                    aria-atomic="true"
                                    aria-live="polite"
                                    class="text"
                                    role="alert"
                                  >
                                    About
                                  </div>
                                  <i
                                    aria-hidden="true"
                                    class="dropdown icon"
                                  />
                                  <div
                                    class="menu transition link-menu"
                                  >
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="/about"
                                      >
                                        About Us
                                      </a>
                                    </div>
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="/documentation"
                                      >
                                        Documentation
                                      </a>
                                    </div>
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="/cite"
                                      >
                                        Cite Us
                                      </a>
                                    </div>
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="http://github.com/bhklab/pharmacodb"
                                      >
                                        Github
                                      </a>
                                    </div>
                                  </div>
                                </div>,
                              }
                            }
                          >
                            <div
                              aria-expanded={false}
                              className="ui simple dropdown header-links link-dropdown"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onMouseDown={[Function]}
                              role="listbox"
                              tabIndex={0}
                            >
                              <div
                                aria-atomic={true}
                                aria-live="polite"
                                className="text"
                                role="alert"
                              >
                                About
                              </div>
                              <Icon
                                as="i"
                                className=""
                                name="dropdown"
                                onClick={[Function]}
                              >
                                <i
                                  aria-hidden="true"
                                  className="dropdown icon"
                                  onClick={[Function]}
                                />
                              </Icon>
                              <DropdownMenu
                                className="link-menu"
                              >
                                <div
                                  className="menu transition link-menu"
                                >
                                  <DropdownItem
                                    key="About Us"
                                  >
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <Link
                                        to="/about"
                                      >
                                        <LinkAnchor
                                          href="/about"
                                          navigate={[Function]}
                                        >
                                          <a
                                            href="/about"
                                            onClick={[Function]}
                                          >
                                            About Us
                                          </a>
                                        </LinkAnchor>
                                      </Link>
                                    </div>
                                  </DropdownItem>
                                  <DropdownItem
                                    key="Documentation"
                                  >
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <Link
                                        to="/documentation"
                                      >
                                        <LinkAnchor
                                          href="/documentation"
                                          navigate={[Function]}
                                        >
                                          <a
                                            href="/documentation"
                                            onClick={[Function]}
                                          >
                                            Documentation
                                          </a>
                                        </LinkAnchor>
                                      </Link>
                                    </div>
                                  </DropdownItem>
                                  <DropdownItem
                                    key="Cite Us"
                                  >
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <Link
                                        to="/cite"
                                      >
                                        <LinkAnchor
                                          href="/cite"
                                          navigate={[Function]}
                                        >
                                          <a
                                            href="/cite"
                                            onClick={[Function]}
                                          >
                                            Cite Us
                                          </a>
                                        </LinkAnchor>
                                      </Link>
                                    </div>
                                  </DropdownItem>
                                  <DropdownItem>
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <a
                                        href="http://github.com/bhklab/pharmacodb"
                                      >
                                        Github
                                      </a>
                                    </div>
                                  </DropdownItem>
                                </div>
                              </DropdownMenu>
                            </div>
                          </RefFindNode>
                        </Ref>
                      </Dropdown>
                      <Link
                        className="header-links link"
                        to="/explore"
                      >
                        <LinkAnchor
                          className="header-links link"
                          href="/explore"
                          navigate={[Function]}
                        >
                          <a
                            className="header-links link"
                            href="/explore"
                            onClick={[Function]}
                          >
                            Explore
                          </a>
                        </LinkAnchor>
                      </Link>
                      <Dropdown
                        additionLabel="Add "
                        additionPosition="top"
                        className="header-links link-dropdown"
                        closeOnBlur={true}
                        closeOnEscape={true}
                        deburr={false}
                        icon="dropdown"
                        minCharacters={1}
                        noResultsMessage="No results found."
                        openOnFocus={true}
                        renderLabel={[Function]}
                        searchInput="text"
                        selectOnBlur={true}
                        selectOnNavigation={true}
                        simple={true}
                        text="Data"
                        wrapSelection={true}
                      >
                        <Ref
                          innerRef={
                            Object {
                              "current": <div
                                aria-expanded="false"
                                class="ui simple dropdown header-links link-dropdown"
                                role="listbox"
                                tabindex="0"
                              >
                                <div
                                  aria-atomic="true"
                                  aria-live="polite"
                                  class="text"
                                  role="alert"
                                >
                                  Data
                                </div>
                                <i
                                  aria-hidden="true"
                                  class="dropdown icon"
                                />
                                <div
                                  class="menu transition link-menu"
                                >
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="/datasets"
                                    >
                                      Datasets
                                    </a>
                                  </div>
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="/cell_lines"
                                    >
                                      Cell Lines
                                    </a>
                                  </div>
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="/tissues"
                                    >
                                      Tissues
                                    </a>
                                  </div>
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="/compounds"
                                    >
                                      Compounds
                                    </a>
                                  </div>
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="/genes"
                                    >
                                      Genes
                                    </a>
                                  </div>
                                  <div
                                    class="item"
                                    role="option"
                                  >
                                    <a
                                      href="/experiments"
                                    >
                                      Experiments
                                    </a>
                                  </div>
                                </div>
                              </div>,
                            }
                          }
                        >
                          <RefFindNode
                            innerRef={
                              Object {
                                "current": <div
                                  aria-expanded="false"
                                  class="ui simple dropdown header-links link-dropdown"
                                  role="listbox"
                                  tabindex="0"
                                >
                                  <div
                                    aria-atomic="true"
                                    aria-live="polite"
                                    class="text"
                                    role="alert"
                                  >
                                    Data
                                  </div>
                                  <i
                                    aria-hidden="true"
                                    class="dropdown icon"
                                  />
                                  <div
                                    class="menu transition link-menu"
                                  >
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="/datasets"
                                      >
                                        Datasets
                                      </a>
                                    </div>
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="/cell_lines"
                                      >
                                        Cell Lines
                                      </a>
                                    </div>
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="/tissues"
                                      >
                                        Tissues
                                      </a>
                                    </div>
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="/compounds"
                                      >
                                        Compounds
                                      </a>
                                    </div>
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="/genes"
                                      >
                                        Genes
                                      </a>
                                    </div>
                                    <div
                                      class="item"
                                      role="option"
                                    >
                                      <a
                                        href="/experiments"
                                      >
                                        Experiments
                                      </a>
                                    </div>
                                  </div>
                                </div>,
                              }
                            }
                          >
                            <div
                              aria-expanded={false}
                              className="ui simple dropdown header-links link-dropdown"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onMouseDown={[Function]}
                              role="listbox"
                              tabIndex={0}
                            >
                              <div
                                aria-atomic={true}
                                aria-live="polite"
                                className="text"
                                role="alert"
                              >
                                Data
                              </div>
                              <Icon
                                as="i"
                                className=""
                                name="dropdown"
                                onClick={[Function]}
                              >
                                <i
                                  aria-hidden="true"
                                  className="dropdown icon"
                                  onClick={[Function]}
                                />
                              </Icon>
                              <DropdownMenu
                                className="link-menu"
                              >
                                <div
                                  className="menu transition link-menu"
                                >
                                  <DropdownItem
                                    key="Datasets"
                                  >
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <Link
                                        to="/datasets"
                                      >
                                        <LinkAnchor
                                          href="/datasets"
                                          navigate={[Function]}
                                        >
                                          <a
                                            href="/datasets"
                                            onClick={[Function]}
                                          >
                                            Datasets
                                          </a>
                                        </LinkAnchor>
                                      </Link>
                                    </div>
                                  </DropdownItem>
                                  <DropdownItem
                                    key="Cell Lines"
                                  >
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <Link
                                        to="/cell_lines"
                                      >
                                        <LinkAnchor
                                          href="/cell_lines"
                                          navigate={[Function]}
                                        >
                                          <a
                                            href="/cell_lines"
                                            onClick={[Function]}
                                          >
                                            Cell Lines
                                          </a>
                                        </LinkAnchor>
                                      </Link>
                                    </div>
                                  </DropdownItem>
                                  <DropdownItem
                                    key="Tissues"
                                  >
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <Link
                                        to="/tissues"
                                      >
                                        <LinkAnchor
                                          href="/tissues"
                                          navigate={[Function]}
                                        >
                                          <a
                                            href="/tissues"
                                            onClick={[Function]}
                                          >
                                            Tissues
                                          </a>
                                        </LinkAnchor>
                                      </Link>
                                    </div>
                                  </DropdownItem>
                                  <DropdownItem
                                    key="Compounds"
                                  >
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <Link
                                        to="/compounds"
                                      >
                                        <LinkAnchor
                                          href="/compounds"
                                          navigate={[Function]}
                                        >
                                          <a
                                            href="/compounds"
                                            onClick={[Function]}
                                          >
                                            Compounds
                                          </a>
                                        </LinkAnchor>
                                      </Link>
                                    </div>
                                  </DropdownItem>
                                  <DropdownItem
                                    key="Genes"
                                  >
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <Link
                                        to="/genes"
                                      >
                                        <LinkAnchor
                                          href="/genes"
                                          navigate={[Function]}
                                        >
                                          <a
                                            href="/genes"
                                            onClick={[Function]}
                                          >
                                            Genes
                                          </a>
                                        </LinkAnchor>
                                      </Link>
                                    </div>
                                  </DropdownItem>
                                  <DropdownItem
                                    key="Experiments"
                                  >
                                    <div
                                      className="item"
                                      onClick={[Function]}
                                      role="option"
                                    >
                                      <Link
                                        to="/experiments"
                                      >
                                        <LinkAnchor
                                          href="/experiments"
                                          navigate={[Function]}
                                        >
                                          <a
                                            href="/experiments"
                                            onClick={[Function]}
                                          >
                                            Experiments
                                          </a>
                                        </LinkAnchor>
                                      </Link>
                                    </div>
                                  </DropdownItem>
                                </div>
                              </DropdownMenu>
                            </div>
                          </RefFindNode>
                        </Ref>
                      </Dropdown>
                    </div>
                  </styled.div>
                </div>
              </div>
            </styled.div>
          </NavBar>
          <div
            className="search-container"
          >
            <h1>
              Try searching for a...
            </h1>
            <SearchBar>
              <styled.div
                className="search-bar"
              >
                <div
                  className="sc-AxhUy dglwly search-bar"
                />
              </styled.div>
            </SearchBar>
            <span>
              Example:   paclitaxel   •   22rv1   •   mcf7 paclitaxel
            </span>
          </div>
        </div>
      </styled.div>
    </SearchHeader>
  </Router>
</BrowserRouter>
`;
